Fixed too long titles

--- a/src/Animations/animations.sass
+++ b/src/Animations/animations.sass
@@ -25,3 +25,11 @@
 @keyframes rotate2
   to
     transform: rotate(-360deg)
+
+@keyframes toUp
+  0%
+    transform: translateY(0%)
+  20%
+    transform: translateY(0%)
+  100%
+    transform: translateY(-150%)
