--- a/src/Components/SubComponents/SingleMovie/single-movie.sass
+++ b/src/Components/SubComponents/SingleMovie/single-movie.sass
@@ -26,11 +26,11 @@
     .movie-img
       filter: brightness(30%)
   .movie-img-wrapper
-    height: 80%
+    height: 70%
     +tablet-large
-      height: 70%
+      height: 60%
     +tablet-small
-      height: 75%
+      height: 65%
   .movie-img
     width: 100%
     height: 100%
@@ -39,7 +39,7 @@
     transition: filter .6s
   .overview
     position: absolute
-    bottom: calc(1/5 * 100%)
+    bottom: calc(3/10 * 100%)
     color: $white
     padding: 0 1rem 1.5rem 1rem
     text-align: center
@@ -47,14 +47,29 @@
     opacity: 0
     transform: translateY(100%)
     +tablet-small
-      bottom: calc(3/10 * 100%)
+      bottom: calc(3.5/10 * 100%)
       padding: 0 .1rem 1rem .1rem
     +tablet-large
-      bottom: calc(3/10 * 100%)
+      bottom: calc(4/10 * 100%)
       padding: 0 .1rem 1rem .1rem
-  .title, .cast
+  .title, .release
     color: $white
     padding: .4rem
     text-align: center
-  .cast
+  .title
+    height: 3.5rem
+    overflow: hidden
+    .animated
+      animation: toUp 3s linear 1s infinite
+  .release
     font-size: .8rem
+  .movie-info
+    height: 30%
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    padding: .5rem 0 1rem 0
+    +tablet-large
+      height: 40%
+    +tablet-small
+      height: 35%
